<resources>
    <string name="app_name">Decibel meter</string>
    <string name="decibel_text_label">Now:</string>
    <string name="decibel_max_text_label">Max:</string>
    <string name="decibel_min_text_label">Min:</string>
    <string name="base_db">40 DB</string>
    <string name="decibel_meter">Decibel meter</string>
    <string name="decibel_info">Decibel info</string>
    <string name="about_app">About app</string>
    <string name="menu_open">Open menu</string>
    <string name="menu_close">Close menu</string>
    <string name="decibel_info_title_text">Decibel info title text</string>
    <string name="decibel_info_danger_level_text">Decibel info danger level text</string>
    <string name="decibel_info_description_text">Decibel info description text</string>
    <string-array name="decibel_titles">
        <item>00 dB - No sound at all</item>
        <item>10 dB - Breathing</item>
        <item>20 dB - Quiet room</item>
        <item>30 dB - Light snoring</item>
        <item>40 dB - Moderate snoring</item>
        <item>50 dB - Conversation</item>
        <item>60 dB - Busy street</item>
        <item>70 dB - Noisy restaurant</item>
        <item>80 dB - Loud radio</item>
        <item>90 dB - Bass drum</item>
        <item>100 dB - Subway train</item>
        <item>110 dB - Car horn</item>
        <item>120 dB - Aircraft takeoff</item>
    </string-array>
    <string-array name="decibel_danger_levels">
        <item>Danger level: Very low</item>
        <item>Danger level: Low</item>
        <item>Danger level: Average</item>
        <item>Danger level: Above average</item>
        <item>Danger level: High</item>
        <item>Danger level: Very high</item>
    </string-array>
    <string-array name="decibel_descriptions">
        <item>There is no sound around you at all. You are probably inside special sound proof room.</item>
        <item>There is almost no sound around you at all. You can hear your breathing and your blood noise.</item>
        <item>It is very quiet around you. There are only a few sounds like clock ticking.</item>
        <item>You can hear several sounds around you. We spend most of our time with this sound loudness.</item>
        <item>You can hear several louder sounds around you. For example you can imagine someones snoring or quiet talking.</item>
        <item>You can hear many sounds around you. You experience this sound loudness every time you are talking with someone.</item>
        <item>It is quite loud around you. You start to notice many sounds around you.</item>
        <item>Sounds around you are loud enough to make you annoyed. It is harder to have a normal conversation.</item>
        <item>It is loud enough that you want to make things that are making noise quieter. You should avoid long exposure to such sound loudness.</item>
        <item>It is very noisy around you. You hear only the thing that is making such loud noise.</item>
        <item>It is super noisy around you. It is impossible to have a normal conversation at this point. Longer exposure to such sound is dangerous.</item>
        <item>You can not hear anything except thing that is making such loud sound. At this point exposure longer than few seconds is dangerous.</item>
        <item>Your whole body can feel the loudness of sound. At this point you might start feeling pain. Avoid even short exposures.</item>
    </string-array>
    <string name="about_app_context">
        This app uses built in device microphone, which is capable of measuring sound amplitude.
        Based on that value decibels are calculated, and then they are shown on gauge and graph.
        Decibel meter app is capable of measuring sound loudness up to 85 decibels.
        You can also find here some useful info about different decibel levels.
    </string>
    <string name="return_button_desc">return button</string>
    <string name="base_message">40 dB - Moderate snoring</string>
</resources>