<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecibelInfoDisplayFragment">

    <TextView
        android:id="@+id/chosen_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="28sp"
        android:text="@string/decibel_info_title_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/chosen_info_danger_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:text="@string/decibel_info_danger_level_text"
        app:layout_constraintTop_toBottomOf="@id/chosen_info_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/chosen_info_description"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/decibel_info_description_text"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/chosen_info_danger_level"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="25dp"
        android:src="@drawable/ic_arrow"
        android:textSize="24sp"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/return_button_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>